# podcastr

./: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: exa.rs  main.rs  openai.rs  utils.rs
src/components/: audio-player.tsx  feedback-dialog.tsx  home-screen.tsx  onboarding-flow.tsx  theme-picker.tsx
src/lib/: exa.ts  openai.ts  persistence.ts  router.tsx  themes.ts
src/screens/: EpisodePage.tsx  RootPage.tsx  SettingsPage.tsx
src/styles/: globals.css
