[package]
name = "podcastr"
version = "0.1.0"
description = "Podcastr desktop app"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
async-openai = { version = "0.38", default-features = false, features = ["audio", "audio-types", "byot", "image", "image-types", "responses", "response-types"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[features]
default = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Flag clones that the compiler could have elided.
redundant_clone = "warn"
# Flag intermediate .collect() calls that are immediately re-iterated.
needless_collect = "warn"
# Flag enum variants that are significantly larger than the others (consider Box).
large_enum_variant = "warn"
